# corteva-code-challenge

./: .gitignore  Makefile  README.md  pyproject.toml
answers/: problem1.md  problem2.md  problem3.md  problem4.md
notebooks/: Data Analysis.ipynb  Data Ingestion.ipynb
src/data_analysis/: aggregate_by_year.py
src/data_ingestion/: create_tables.py  ingest_weather_data.py
src/data_models/: __init__.py  weather_data.py  yearly_aggregations.py
src/scripts/: app.py  run_data_analysis.py  run_data_pipeline.py
tests/: test_api.py  test_data_analysis.py  test_data_ingestion.py
